Updated code and made changes

--- a/Controlling Any Media Player Via Hand Gestures/Templates/Main.html
+++ b/Controlling Any Media Player Via Hand Gestures/Templates/Main.html
@@ -186,11 +186,11 @@
           <span class="close" onclick="closePopup('contactPopup')">&times;</span>
           <div class="popup-content">
               <h2>Contact</h2>
-              <p>Email: <a href="mailto:athreyasharma6281@gmail.com">athreyasharma6281@gmail.com</a></p>
-              <p>Email: <a href="mailto:palurisaisree2003@gmail.com">palurisaisree2003@gmail.com</a></p>
               <p>Email: <a href="mailto:vamsikrishnagadde1@gmail.com">vamsikrishnagadde1@gmail.com</a></p>
-              <p>Email: <a href="mailto:pavan322003@gmail.com">pavan322003@gmail.com</a></p>
-              <p>Email: <a href="mailto:athreyasharma6281@gmail.com">athreyasharma6281@gmail.com</a></p>
+              <p>Email: <a href="mailto:vamsikrishnagadde1@gmail.com">vamsikrishnagadde1@gmail.com</a></p>
+              <p>Email: <a href="mailto:vamsikrishnagadde1@gmail.com">vamsikrishnagadde1@gmail.com</a></p>
+              <p>Email: <a href="mailto:vamsikrishnagadde1@gmail.com">vamsikrishnagadde1@gmail.com</a></p>
+              <p>Email: <a href="mailto:vamsikrishnagadde1@gmail.com">vamsikrishnagadde1@gmail.com</a></p>
           </div>
       </div>
   
